--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,14 @@
-baseurl: "/lab-laravel-dusk"
+# Build settings
+# baseurl: "/besoin"
+
+# lsi: false
+# safe: true
+# incremental: false
+# highlighter: rouge
+# gist:
+#   noscript: false
+# kramdown:
+#   math_engine: mathjax
+#   syntax_highlighter: rouge
+
+ 
